--- a/tasks.html
+++ b/tasks.html
@@ -13,7 +13,7 @@
   </nav>
 
   <div class="container">
-    <h1>Vos Tâches 📋</h1>
+    <h1>Vos Tâches </h1>
     <p id="info"></p>
     <ul id="tasks-list"></ul>
   </div>
@@ -21,9 +21,9 @@
   <script>
     // Simulation des tâches par employé
     const tasks = {
-      "101": ["📌 Préparer rapport mensuel", "🤝 Assister à la réunion", "📧 Vérifier les mails"],
-      "102": ["🖨️ Gérer les impressions", "📂 Organiser les archives"],
-      "103": ["💻 Développer la page web", "🐞 Corriger les bugs", "🔄 Mettre à jour le site"]
+      "101": [" Préparer rapport mensuel", " Assister à la réunion", " Vérifier les mails"],
+      "102": [" Gérer les impressions", " Organiser les archives"],
+      "103": [" Développer la page web", " Corriger les bugs", " Mettre à jour le site"]
     };
 
     const params = new URLSearchParams(window.location.search);
@@ -45,3 +45,4 @@
   </script>
 </body>
 </html>
+
