--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">🏠 Accueil</a>
-    <a href="login.html">🔑 Connexion</a>
+    <a href="index.html"> Accueil</a>
+    <a href="login.html"> Connexion</a>
   </nav>
 
   <div class="container">
@@ -20,3 +20,4 @@
   </div>
 </body>
 </html>
+
