--- a/tasks.html
+++ b/tasks.html
@@ -8,8 +8,8 @@
 </head>
 <body>
   <nav>
-    <a href="index.html">🏠 Accueil</a>
-    <a href="login.html">🚪 Déconnexion</a>
+    <a href="index.html"> ... Accueil</a>
+    <a href="login.html">... Déconnexion</a>
   </nav>
 
   <div class="container">
@@ -45,4 +45,5 @@
   </script>
 </body>
 </html>
+
 
